# obstacle-detector

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  easylogging++.config
cmake/: config.hpp.in
include/: client_tcp.hpp  data_presenter.hpp  obstacle_detector.hpp  self_localizator.hpp  server_tcp.hpp  socket.hpp  utils.hpp
src/: client.cpp  client_tcp.cpp  data_presenter.cpp  easylogging++.cpp  main.cpp  obstacle_detector.cpp  self_localizator.cpp  server.cpp  server_tcp.cpp  socket.cpp  utils.cpp
test/: CMakeLists.txt
test/src/: test.cpp
